--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,13 +27,14 @@
     <script src="/js/bootstrap-toggle.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/masonry.pkgd.min.js"></script>
-    <script src="/js/hyphenator.js"></script>
-    <!-- <script src="/js/bootstrap.js"></script> -->
-    <!-- <script src="/js/skel.min.js"></script>
-    <script src="/js/skel-layers.min.js"></script>
-    <script src="/js/init.js"></script> -->
-    <!-- <script src="/js/bootstrap.min.js"></script> -->
-        
+    <!-- <script src="/js/hyphenator.js"></script> -->
+    <script>
+        var Hyphenopoly = {
+            "require" : { "en-gb" : "" },
+            "paths" : { "patterndir" : "/js/patterns/", "maindir" : "/js/" } 
+        };
+    </script>
+    <script src="/js/Hyphenopoly_Loader.js"></script>
     <noscript>
         <!-- <link rel="stylesheet" href="/css/skel.css" /> -->
         <link rel="stylesheet" href="/css/style.css" />
