--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,71 +23,26 @@
         <div class="clear-fix"></div>
         <div class="collapse navbar-collapse float-right" id="navbarSupportedContent">
             <ul class="navbar-nav">
+            {% for item in site.data.menu %}
+                {% if item.subitems %}
                 <li class="nav-item my-2 my-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/research-areas.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Research</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/research-areas.html">Research areas</a>
-                            <a class="dropdown-item" href="/software.html">Software</a>
-                            <a class="dropdown-item" href="/publications.html">Publications</a>
-                        </div>
-                    </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="{{ item.link }}" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" 
+                    aria-expanded="false">{{ item.title }}</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      {% for subitem in item.subitems %}
+                        <a class="dropdown-item" href="{{ subitem.link }}">{{ subitem.title }}</a>
+                      {% endfor %}
+                    </div>
+                  </li>
                 </li>
-                <li class="nav-item">
-                <li class="nav-item dropdown">
-                 <a class="nav-link dropdown-toggle" href="/education.html"
-                 id="navbarDropdown2" data-toggle="dropdown" 
-                 aria-haspopup="true" aria-expanded="false">
-                 Education
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                 <a class="dropdown-item" href="/education.html#bachelor">Bachelor</a>
-                 <a class="dropdown-item" href="/education.html#master-courses">MSc Courses</a>
-                 <a class="dropdown-item" href="/education.html#talent-fellowship">Talent Fellowship</a>
-                 <a class="dropdown-item" href="/education.html#thesis-proposals">Thesis Proposals</a>
-                </div>
-               </li>
+              {% else %}
+              <li class="nav-item">
+                  <a class="nav-link" href="{{ item.link }}">{{ item.title }}</a>
               </li>
-                              <!-- <li class="nav-item">
-               <a class="nav-link" href="/education.html">Education</a>
-              </li> -->
-                              <!-- <li class="nav-item">
-               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="/industry.html"
-                id="navbarDropdown3" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Industry
-               </a>
-               <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                <a class="dropdown-item" href="/industry.html#consultancy">Consultancy</a>
-                <a class="dropdown-item" href="/industry.html#phd-postdoc">Industrial PhD/PostDoc</a>
-                <a class="dropdown-item" href="/industry.html#talent-fellowship">Talent Fellowship</a>
-                <a class="dropdown-item" href="/industry.html#innovation-projects">Innovation Projects</a>
-                <a class="dropdown-item" href="/industry.html#training">Training</a>
-               </div>
-              </li>
-              </li> -->
-                <li class="nav-item">
-                    <a class="nav-link" href="/grants.html">Grants</a>
-                </li>
-                <li class="nav-item">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/people.html" id="navbarDropdown4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  People
- </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
-                            <a class="dropdown-item" href="/people.html">Members</a>
-                            <a class="dropdown-item" href="/people.html#career">Open Positions</a>
-                        </div>
-                    </li>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/events.html">Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/communities.html">Communities</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+              {% endif %}
+          {% endfor %}
+          </ul>
+      </div>
+      </div>
 </nav>
