--- a/web/_includes/people_former.html
+++ b/web/_includes/people_former.html
@@ -15,7 +15,7 @@
 <div class="col-sm-7">
 <div class="row">
 <div class="col-sm-12"><strong>{{ person.name }}</strong></div>
-<div class="col-sm-12">Last position in the group {{ person.role }}</div>
+<div class="col-sm-12">Former {{ person.role }}</div>
 {%if person.website %}
 <div class="col-sm-6">
     <small><a class="nodec" href="{{ person.website }}"><span class="fa fa-desktop"></span> Website</a></small>
