--- a/web/_includes/head.html
+++ b/web/_includes/head.html
@@ -25,7 +25,7 @@
     <script type="application/javascript" src="/js/jquery.scrolly.min.js"></script>
     <script type="application/javascript" src="/js/jquery.scrollgress.min.js"></script>
     <script type="application/javascript" src="/js/bootstrap-toggle.min.js"></script>
-    <script stype="application/javascript" rc="/js/bootstrap.bundle.min.js"></script>
+    <script type="application/javascript" src="/js/bootstrap.bundle.min.js"></script>
     <script type="application/javascript" src="/js/masonry.pkgd.min.js"></script>
     <!-- <script src="/js/hyphenator.js"></script> -->
     <script>
